# ChangeLog for dev-perl/ImageInfo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/ChangeLog,v 1.83 2011/09/04 11:23:57 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -ImageInfo-1.31.ebuild:
  Cleanup

*ImageInfo-1.310.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +ImageInfo-1.310.0.ebuild:
  Change version scheme

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -ImageInfo-1.28.ebuild:
  Cleanup

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> ImageInfo-1.30.ebuild:
  ppc64 stable wrt #341865

*ImageInfo-1.31 (30 Sep 2010)

  30 Sep 2010; Robin H. Johnson <robbat2@gentoo.org> +ImageInfo-1.31.ebuild:
  Version bump via perl-bump experimental tool.

  27 Jun 2010; <nixnut@gentoo.org> ImageInfo-1.30.ebuild:
  ppc stable #323529

  08 May 2010; Raúl Porcel <armin76@gentoo.org> ImageInfo-1.30.ebuild:
  alpha/ia64/sparc stable wrt #314467

  17 Apr 2010; Torsten Veller <tove@gentoo.org> ImageInfo-1.30.ebuild:
  Stable on amd64, x86 (#314467)

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -ImageInfo-1.29.ebuild:
  Cleanup

*ImageInfo-1.30 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +ImageInfo-1.30.ebuild:
  Version bump via perl-bump experimental tool.

*ImageInfo-1.29 (02 Aug 2009)

  02 Aug 2009; Torsten Veller <tove@gentoo.org> +ImageInfo-1.29.ebuild:
  Version bump

  11 Jan 2009; Torsten Veller <tove@gentoo.org> -ImageInfo-1.26.ebuild:
  Cleanup

  11 Jan 2009; Markus Meier <maekke@gentoo.org> ImageInfo-1.28.ebuild:
  amd64/x86 stable, bug #254334

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> ImageInfo-1.28.ebuild:
  ia64 stable wrt #254334

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> ImageInfo-1.28.ebuild:
  Marked ppc/ppc64 for bug #254334.

  09 Jan 2009; Tobias Klausmann <klausman@gentoo.org> ImageInfo-1.28.ebuild:
  Stable on alpha, bug #254334
