@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/Attic/ImageInfo-1.310.0.ebuild,v 1.1 2011/08/30 13:11:05 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/Attic/ImageInfo-1.310.0.ebuild,v 1.2 2012/02/24 10:20:07 ago Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ inherit perl-module
 DESCRIPTION="The Perl Image-Info Module"
 
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 DEPEND=">=dev-perl/IO-String-1.01
