@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/ImageInfo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/ChangeLog,v 1.83 2011/09/04 11:23:57 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/ChangeLog,v 1.84 2012/02/24 10:20:07 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ImageInfo-1.310.0.ebuild:
+  Stable for amd64, wrt bug #400151
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -ImageInfo-1.31.ebuild:
   Cleanup
